# MT5_Autotester_agent_manager

./: .dockerignore  .env.docker.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  README.md  agent.md  docker-compose.yml  pyproject.toml  run_manager.bat  run_node.bat
.claude/: settings.local.json
ai_context/: README.md  ictrading_regression_button.md  portfolio_ubs_parity.md  repair_request_async.md
assets/: axi_assets.ini  ictrading_assets.ini  roboforex_assets.ini
config/: manager.example.json  node.example.json
mt5_manager/: __init__.py  common.py  docker_entrypoint.py  manager.py  node.py  portfolio_monthly_service.py  portfolio_service.py
mt5_manager/static/: app.js  index.html  portfolios.html  portfolios.js  portfolios_monthly.html  portfolios_monthly.js  styles.css  universe.html  universe.js
portfolio_manager/: __init__.py  mt5_report.py  ubs_portfolio.py
tests/: test_common.py  test_docker_entrypoint.py  test_integration.py  test_node.py  test_portfolio_equity_risk.py  test_portfolio_service.py  test_portfolio_wire_compat.py  test_static_portfolios.py
tools/: new_token.ps1
ubs/: __init__.py  path_utils.py  universe.py
