[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5-autotester-agent-manager"
version = "0.1.0"
description = "Panel distribuido para iniciar y observar generaciones MT5 Autotester"
requires-python = ">=3.10"
dependencies = ["lxml>=5"]

[project.scripts]
mt5-manager = "mt5_manager.manager:main"
mt5-node = "mt5_manager.node:main"

[tool.setuptools.package-data]
mt5_manager = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
